e2e/tests/all/snapshots/data_list_rest_desktop.snap
---
source: e2e/src/suite.rs
description: data_list at desktop (rest)
expression: tree
---
DescriptionList
  term "Status"
    StaticText "Status"
  definition
    StaticText "Active"
