e2e/tests/all/snapshots/data_list_rest_mobile.snap
---
source: e2e/src/suite.rs
description: data_list at mobile (rest)
expression: tree
---
DescriptionList
  term "Status"
    StaticText "Status"
  definition
    StaticText "Active"
