e2e/tests/all/snapshots/date_field_open_desktop.snap
---
source: e2e/src/suite.rs
description: date_field at desktop (open)
expression: tree
---
LabelText
  StaticText "Arrival"
generic
  combobox "Arrival" = September 25, 2026 [expanded] [haspopup=dialog]
    generic
      StaticText "September 25, 2026"
generic
  dialog "Date"
    button "Previous month"
    button "September 2026" [live=polite]
      StaticText "September 2026"
    button "Next month"
    grid "September 2026"
      row "Monday Tuesday Wednesday Thursday Friday Saturday Sunday"
        columnheader "Monday"
          StaticText "Mo"
        columnheader "Tuesday"
          StaticText "Tu"
        columnheader "Wednesday"
          StaticText "We"
        columnheader "Thursday"
          StaticText "Th"
        columnheader "Friday"
          StaticText "Fr"
        columnheader "Saturday"
          StaticText "Sa"
        columnheader "Sunday"
          StaticText "Su"
      row "31 1 2 3 4 5 6"
        gridcell "31" [selected=false]
          button "31"
            StaticText "31"
        gridcell "1" [selected=false]
          button "1"
            StaticText "1"
        gridcell "2" [selected=false]
          button "2"
            StaticText "2"
        gridcell "3" [selected=false]
          button "3"
            StaticText "3"
        gridcell "4" [selected=false]
          button "4"
            StaticText "4"
        gridcell "5" [selected=false]
          button "5"
            StaticText "5"
        gridcell "6" [selected=false]
          button "6"
            StaticText "6"
      row "7 8 9 10 11 12 13"
        gridcell "7" [selected=false]
          button "7"
            StaticText "7"
        gridcell "8" [selected=false]
          button "8"
            StaticText "8"
        gridcell "9" [selected=false]
          button "9"
            StaticText "9"
        gridcell "10" [selected=false]
          button "10"
            StaticText "10"
        gridcell "11" [selected=false]
          button "11"
            StaticText "11"
        gridcell "12" [selected=false]
          button "12"
            StaticText "12"
        gridcell "13" [selected=false]
          button "13"
            StaticText "13"
      row "14 15 16 17 18 19 20"
        gridcell "14" [selected=false]
          button "14"
            StaticText "14"
        gridcell "15" [selected=false]
          button "15"
            StaticText "15"
        gridcell "16" [selected=false]
          button "16"
            StaticText "16"
        gridcell "17" [selected=false]
          button "17"
            StaticText "17"
        gridcell "18" [selected=false]
          button "18"
            StaticText "18"
        gridcell "19" [selected=false]
          button "19"
            StaticText "19"
        gridcell "20" [selected=false]
          button "20"
            StaticText "20"
      row "21 22 23 24 25 26 27"
        gridcell "21" [selected=false]
          button "21"
            StaticText "21"
        gridcell "22" [selected=false]
          button "22"
            StaticText "22"
        gridcell "23" [selected=false]
          button "23"
            StaticText "23"
        gridcell "24" [selected=false]
          button "24"
            StaticText "24"
        gridcell "25" [selected]
          button "25"
            StaticText "25"
        gridcell "26" [selected=false]
          button "26"
            StaticText "26"
        gridcell "27" [selected=false]
          button "27"
            StaticText "27"
      row "28 29 30 1 2 3 4"
        gridcell "28" [selected=false]
          button "28"
            StaticText "28"
        gridcell "29" [selected=false]
          button "29"
            StaticText "29"
        gridcell "30" [selected=false]
          button "30"
            StaticText "30"
        gridcell "1" [selected=false]
          button "1"
            StaticText "1"
        gridcell "2" [selected=false]
          button "2"
            StaticText "2"
        gridcell "3" [selected=false]
          button "3"
            StaticText "3"
        gridcell "4" [selected=false]
          button "4"
            StaticText "4"
      row "5 6 7 8 9 10 11"
        gridcell "5" [selected=false]
          button "5"
            StaticText "5"
        gridcell "6" [selected=false]
          button "6"
            StaticText "6"
        gridcell "7" [selected=false]
          button "7"
            StaticText "7"
        gridcell "8" [selected=false]
          button "8"
            StaticText "8"
        gridcell "9" [selected=false]
          button "9"
            StaticText "9"
        gridcell "10" [selected=false]
          button "10"
            StaticText "10"
        gridcell "11" [selected=false]
          button "11"
            StaticText "11"
--> aria-controls [id="date-field-dialog"] (rendered above)
