e2e/tests/all/snapshots/dialog_rest_mobile.snap
---
source: e2e/src/suite.rs
description: dialog at mobile (rest)
expression: tree
---
link "Skip to content"
  StaticText "Skip to content"
dialog "Filters"
  heading "Filters" [level=2]
    StaticText "Filters"
  button "Close"
  paragraph
    StaticText "Narrow the list."
StaticText "Bordered paper"
link "Card link"
  StaticText "Card link"
paragraph
  link "Read more about filters"
    StaticText "Read more"
    StaticText "about filters"
