e2e/tests/all/snapshots/direction_toggle_rest_desktop.snap
---
source: e2e/src/suite.rs
description: direction_toggle at desktop (rest)
expression: tree
---
button "Switch to right-to-left text"
paragraph
  StaticText "Page text"
button "Clear"
  StaticText "Clear"
paragraph
  StaticText "none"
