e2e/tests/all/snapshots/direction_toggle_rest_mobile.snap
---
source: e2e/src/suite.rs
description: direction_toggle at mobile (rest)
expression: tree
---
button "Switch to right-to-left text"
paragraph
  StaticText "Page text"
button "Clear"
  StaticText "Clear"
paragraph
  StaticText "none"
